# pkgsrc

./: .gitignore
bootstrap/: bootstrap
databases/db4/: distinfo
devel/SDL/: distinfo
devel/SDL2/: distinfo
devel/boehm-gc/: distinfo
devel/boost-libs/: Makefile
devel/cmake/: Makefile  PLIST  distinfo
devel/editline/: distinfo
devel/exempi/: distinfo
devel/git-base/: distinfo
devel/glib2/: distinfo
graphics/: Makefile
lang/: Makefile
lang/nodejs/patches/: patch-common.gypi  patch-configure.py  patch-deps_uv_include_uv_errno.h  patch-deps_uv_include_uv_unix.h  patch-deps_uv_src_random.c  patch-deps_uv_src_unix_bsd-ifaddrs.c  patch-deps_uv_src_unix_core.c  patch-deps_uv_src_unix_freebsd.c  patch-deps_uv_src_unix_fs.c  patch-deps_uv_src_unix_internal.h  patch-deps_uv_src_unix_process.c  patch-deps_uv_src_unix_tty.c  patch-deps_v8_BUILD.gn  patch-deps_v8_include_v8config.h  patch-deps_v8_src_base_platform_platform-posix.cc  patch-deps_v8_src_d8_d8-posix.cc  patch-deps_v8_third__party_zlib_contrib_minizip_ioapi.h  patch-node.gyp  patch-node.gypi  patch-src_debug__utils.cc  patch-src_inspector__agent.cc  patch-src_large__pages_node__large__page.cc  patch-tools_gyp_pylib_gyp_common.py  patch-tools_gyp_pylib_gyp_generator_make.py  patch-tools_specialize__node__d.py  patch-tools_utils.py  patch-tools_v8_gypfiles_d8.gyp  patch-tools_v8_gypfiles_toolchain.gypi  patch-tools_v8_gypfiles_v8.gyp
mail/: Makefile
mk/: bsd.prefs.mk  pf.buildlink3.mk  pthread.builtin.mk
multimedia/: Makefile
net/: Makefile
www/: Makefile
x11/: Makefile
x11/tk/: distinfo
(+683 files in other folders)
